cluster/apps/default/mayan/mayan-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mayan
  annotations:
    linkerd.io/inject: enabled
