cluster/apps/default/mayan/celery-broker-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-broker
  namespace: mayan
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: celery-broker
  template:
    metadata:
      labels:
        app: celery-broker
    spec:
      containers:
        - name: celery-broker
          image: redis:7.0.4-alpine
          command:
            - "redis-server"
          args:
            - "--databases"
            - "1"
            - "--maxmemory-policy"
            - "allkeys-lru"
            - "--save"
            - ""
            - "--requirepass"
            - "$(MAYAN_CELERY_BROKER_PASSWORD)"
          ports:
            - name: redis
              containerPort: 6379
              protocol: TCP
          volumeMounts:
            - name: redis-data
              mountPath: /data
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
      volumes:
        - name: redis-data
          hostPath:
            path: /mnt/mayan/redis/celery-broker
