cluster/apps/default/mayan/celery-results-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-results
  namespace: mayan
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: celery-results
  template:
    metadata:
      labels:
        app: celery-results
    spec:
      containers:
        - name: celery-results
          image: redis:5.0.14-alpine
          command:
            - "redis-server"
          args:
            - "--databases"
            - "1"
            - "--maxmemory-policy"
            - "allkeys-lru"
            - "--save"
            - ""
            - "--requirepass"
            - "$(MAYAN_CELERY_RESULT_PASSWORD)"
          ports:
            - name: redis
              containerPort: 6379
              protocol: TCP
          volumeMounts:
            - name: redis-data
              mountPath: /data
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
      volumes:
        - name: redis-data
          hostPath:
            path: /mnt/mayan/redis/celery-results
