cluster/apps/default/mayan/mayan-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mayan
  namespace: mayan
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mayan
  template:
    metadata:
      labels:
        app: mayan
    spec:
      containers:
        - name: mayan
          image: mayanedms/mayanedms:3.3.14
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          volumeMounts:
            - name: mayan-data
              mountPath: /var/lib/mayan
            - name: mayan-config
              mountPath: /etc/mayan
            - name: mayan-watch
              mountPath: /watch
          resources:
            limits:
              cpu: "1000m"
              memory: "4Gi"
      volumes:
        - name: mayan-data
          hostPath:
            path: /mnt/mayan/mayan/data
        - name: mayan-config
          hostPath:
            path: /mnt/mayan/mayan/config
        - name: mayan-watch
          hostPath:
            path: /mnt/mayan/watch
