cluster/apps/default/mayan/celery-broker-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: celery-broker
  namespace: mayan
spec:
  selector:
    app: celery-broker
  ports:
    - name: redis
      port: 6379
      targetPort: redis
      protocol: TCP
